--- a/src/css/core.scss
+++ b/src/css/core.scss
@@ -16,6 +16,7 @@
   --custom-panels-informational: rgba(255, 173, 173, .2);
   --custom-panels-misc: rgba(219, 141, 255, .2);
   --custom-border-radius: 6px;
+  --text-shadow: 0 0 2px var(--neon-border-color);
 }
 
 button,
