--- a/src/plug-ins/ControlCenter/HTML/css/style.scss
+++ b/src/plug-ins/ControlCenter/HTML/css/style.scss
@@ -1,7 +1,7 @@
 startBar,
 startBar statusbar .notifications,
 .tickersTape {
-  background-image: radial-gradient(rgba(0, 255, 255, 0.589) 0.8px, var(--primaryBGColor) 0.8px);
+  background-image: radial-gradient(var(--accentTextColor) 0.8px, var(--primaryBGColor) 0.8px);
   background-size: 15px 15px;
 }
 
@@ -90,7 +90,7 @@ startBar logo div.mainLogo::after {
   font-size: 16px;
   font-weight: 800;
   color: var(--neon-border-color) !important;
-  text-shadow: 0 0 12px var(--neon-border-color) !important;
+  text-shadow: var(--text-shadow) !important;
   font-family: 'Calibri', sans-serif;
 }
 
@@ -125,7 +125,7 @@ startBar {
     ping {
       font-weight: 800;
       color: var(--neon-border-color) !important;
-      text-shadow: 0 0 12px var(--neon-border-color);
+      text-shadow: var(--text-shadow) !important;
       font-family: 'Calibri', sans-serif;
     }
   }
@@ -184,7 +184,7 @@ panelTile.Binds {
     background-color: var(--neon-background-color);
     font-size: 16px;
     color: var(--neon-border-color) !important;
-    text-shadow: 0 0 12px var(--neon-border-color) !important;
+    text-shadow: var(--text-shadow) !important;
   }
 
 
